-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The reverse order of request_out_callback() and reply_in_callback() puts the RPC into UNREGISTERING state, which is waiting for RPC & bulk md unlink, whereas only RPC md unlink has been called so far. If bulk is lost, even expired_set does not check for UNREGISTERING state.
The same for write if server returns an error.
- is duplicated by
-
LU-9861 Client not reconnecting to OST
-
- Resolved
-
- is related to
-
LU-2522 conf-sanity test_23b timed out during mount: RPCs in "Unregistering" phase found
-
- Resolved
-
-
LU-8062 recovery-small test_115b: @@@@@@ FAIL: dd success
-
- Resolved
-
-
LU-8511 mdc stuck in EVICTED state
-
- Resolved
-
-
LU-8067 sanityn test_31a: read dd: reading `/mnt/lustre2/d31a.sanityn/f31a.sanityn': Input/output error 0 blocks, must be
-
- Resolved
-
- mentioned in
-
Page Loading...