lustre/ptlrpc/niobuf.c
@@ -428,7 +428,7 @@ int ptlrpc_unregister_bulk(struct ptlrpc_request *req, int async)
 
 	/* Let's setup deadline for reply unlink. */
 	if (OBD_FAIL_CHECK(OBD_FAIL_PTLRPC_LONG_BULK_UNLINK) &&
-	    async && req->rq_bulk_deadline == 0)
+	    async && req->rq_bulk_deadline == 0 && cfs_fail_val == 0)
 		req->rq_bulk_deadline = cfs_time_current_sec() + LONG_UNLINK;
 
 	if (ptlrpc_client_bulk_active(req) == 0)	/* completed or */
@@ -445,14 +445,14 @@ int ptlrpc_unregister_bulk(struct ptlrpc_request *req, int async)
 	if (ptlrpc_client_bulk_active(req) == 0)	/* completed or */
 		RETURN(1);				/* never registered */
 
-        /* Move to "Unregistering" phase as bulk was not unlinked yet. */
-        ptlrpc_rqphase_move(req, RQ_PHASE_UNREGISTERING);
+	/* Move to "Unregistering" phase as bulk was not unlinked yet. */
+	ptlrpc_rqphase_move(req, RQ_PHASE_UNREG_BULK);
 
-        /* Do not wait for unlink to finish. */
-        if (async)
-                RETURN(0);
+	/* Do not wait for unlink to finish. */
+	if (async)
+		RETURN(0);
 
-        for (;;) {
+	for (;;) {
 		/* The wq argument is ignored by user-space wait_event macros */
 		wait_queue_head_t *wq = (req->rq_set != NULL) ?
 					&req->rq_set->set_waitq :
